--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -96,66 +96,72 @@ main {
         }
     }
 
-    #discover {
-        
-        margin: 130px 0 0 100px;
+    #main-div { 
 
-        @media only screen and (max-width: 768px) {
-            margin-left: 40px;
-        }
-    
-        h1 {
-            font-size: 17px;
-            font-weight: 400;
-            color: $color-gray;
-            margin-bottom: 9px;
-        }
-
-        h2 {
-            font-size: 28px;
-            font-weight: 400;
-            color: #010101;
-            margin-bottom: 37px;
-        }
-
-        p {
-            font-size: 20px;
-            font-weight: 400;
-            color: $color-gray;
-            width: 235px;
-            height: 115px;
-        }
-    }
-           
-    #div {
         @include flex;
-        max-width: 957px;
-        margin-bottom: 100px;
-        margin-left: 100px;
+    
+        #discover {
+        
+            margin: 130px 0 0 100px;
 
-        @media only screen and (max-width: 768px) {
-            margin-left: 40px;
+            @media only screen and (max-width: 768px) {
+                margin-left: 40px;
+            }
+    
+            h1 {
+                font-size: 17px;
+                font-weight: 400;
+                color: $color-gray;
+                margin-bottom: 9px;
+            }
+    
+            h2 {
+                font-size: 28px;
+                font-weight: 400;
+                color: #010101;
+                margin-bottom: 37px;
+            }
+    
+            p {
+                font-size: 20px;
+                font-weight: 400;
+                color: $color-gray;
+                width: 235px;
+                height: 115px;
+            }
         }
+           
+        #div {
+            @include flex;
+            max-width: 957px;
+            margin-top: 76px;
+            margin-bottom: 100px;
+            margin-left: 100px;
 
-        div {
-            margin-top: 56px;
-            margin-right: 33px;
-        }
+            @media only screen and (max-width: 768px) {
+                margin-left: 40px;
+            }
 
-        h1 {
-            font-size: 19px;
-            font-weight: 400;
-            color: #343232;
-            margin-top: 23px;
-            margin-bottom: 9px;
-        }
+            div {
+                margin-top: 56px;
+                margin-right: 33px;
+            }
 
-        p {
-            font-size: 18px;
-            font-weight: 400;
-            color: $color-gray;
-            width: 286px;
-            height: 63px;
+            h1 {
+                font-size: 19px;
+                font-weight: 400;
+                color: #343232;
+                margin-top: 23px;
+                margin-bottom: 9px;
+            }
+
+            p {
+                font-size: 18px;
+                font-weight: 400;
+                color: $color-gray;
+                width: 286px;
+                height: 63px;
+            }
         }
-    }
+     }
 }
