--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -63,7 +63,7 @@ main {
     #cover-image {
         width: 100%;
         height: 600px;
-        background-image: url(/images/pic1.png);
+        background-image: url(images/pic1.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
