--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ main {
 main #cover-image {
   width: 100%;
   height: 600px;
-  background-image: url(/images/pic1.png);
+  background-image: url(../images/pic1.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
